# Project-Expense-and-Claim-Tracker

./: .gitignore  README.md  pyproject.toml
backend/: common_constants.py  database.py  income_expenses.py  main.py  models.py  projects.py
backend/tests/: conftest.py  test_dashboard_aggregation.py  test_expenses.py  test_income.py  test_pdf_parser.py  test_projects.py
docs/: lovable_ai_instructions.md
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/api/: client.ts  expenses.ts  income.ts  pdf.ts  projects.ts
frontend/src/components/: AppSidebar.tsx  PageHeader.tsx  States.tsx  WelcomeDialog.tsx
frontend/src/config/: welcomeConfig.ts
frontend/src/hooks/: useProjects.ts
frontend/src/routes/: __root.tsx  expenses.tsx  income.tsx  index.tsx  pdf-import.tsx  projects.$projectId.tsx  projects.index.tsx
frontend/src/types/: index.ts
